tests/algorithms/x/Elixir/graphs/even_tree.error
run: exit status 1
    error: undefined variable "tree"
    │
 81 │           while_fun.(while_fun, i, tree)
    │                                    ^^^^
    │
    └─ /workspace/mochi/tests/algorithms/x/Elixir/graphs/even_tree.exs:81:36: Main.main/0

    warning: variable "i" is unused (there is a variable with the same name in the context, use the pin operator (^) to match on it or prefix this variable with underscore if it is not meant to be used)
    │
 80 │       {i, tree} = try do
    │        ~
    │
    └─ /workspace/mochi/tests/algorithms/x/Elixir/graphs/even_tree.exs:80:8: Main.main/0

    warning: variable "tree" is unused (if the variable is not meant to be used, prefix it with an underscore)
    │
 80 │       {i, tree} = try do
    │           ~
    │
    └─ /workspace/mochi/tests/algorithms/x/Elixir/graphs/even_tree.exs:80:11: Main.main/0

** (CompileError) /workspace/mochi/tests/algorithms/x/Elixir/graphs/even_tree.exs: cannot compile module Main (errors have been logged)

